# aksharaMD

./: .dockerignore  .env.example  .gitignore  ADR.md  BETA.md  BETA_AGREEMENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  LICENSE  README.md  SECURITY.md  benchmark_liteparse.py  comparison.md  mcp_config.json  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
aksharamd/: __init__.py  cli.py  compiler.py  context.py  ledger.py  mcp_server.py  utils.py
aksharamd/dedup/: __init__.py  minhash.py
aksharamd/index/: __init__.py  config.py  embedder.py  queue.py  store.py  watcher.py  worker.py
aksharamd/models/: __init__.py  asset.py  block.py  chunk.py  document.py  key_value.py  manifest.py  table.py  validation.py
aksharamd/packaging/: __init__.py  adapters.py  models.py  payload.py  payload_builder.py  planner.py  policy.py  token_accounting.py  writer.py
aksharamd/plugins/: base.py  registry.py
aksharamd/renderers/: key_value_markdown.py  table_markdown.py
aksharamd/scoring/: __init__.py  key_value_classifier.py  key_value_config.py  key_value_detection.py  models.py  readiness.py  table_calibration.py  table_expectation.py  table_findings.py  table_quality.py
benchmarks/: ADVANCED_FIDELITY_2026-07-18.json  ADVANCED_FIDELITY_2026-07-18.md  EXPECTATION_VALIDATION_REPORT_V1.md  EXPECTATION_VALIDATION_REPORT_V2.md  EXPECTATION_VALIDATION_REPORT_V3.md  LLM_QA_BENCHMARK.md  MULTICOLUMN_CANDIDATE_REPLAY_2026-07-18.json  MULTICOLUMN_CANDIDATE_REPLAY_2026-07-18.md  MULTICOLUMN_RECALIBRATION_2026-07-18.json  MULTICOLUMN_RECALIBRATION_2026-07-18.md  MULTICOLUMN_RECALIBRATION_METRICS_2026-07-18.json  PARSEBENCH_ADAPTER.md  PARSEBENCH_ASSET_PROVENANCE_2026-07-18.md  PARSEBENCH_PAGE_GROUND_TRUTH_2026-07-18.md  PARSEBENCH_RECALIBRATION_2026-07-19.json  PARSEBENCH_RECALIBRATION_2026-07-19.md  PARSEBENCH_REFERENCE_FETCH_DESIGN.md  PARSEBENCH_RESULTS.md  PDF_BENCHMARK_V1_BASELINE_2026-07-19.json  PDF_BENCHMARK_V1_BASELINE_2026-07-19.md  PDF_BENCHMARK_V1_MARKITDOWN_2026-07-20.json  PDF_BENCHMARK_V1_MARKITDOWN_2026-07-20.md  PDF_BENCHMARK_V1_PARITY_AUDIT_2026-07-19.json  PDF_BENCHMARK_V1_PYMUPDF4LLM_2026-07-19.json  PDF_BENCHMARK_V1_PYMUPDF4LLM_2026-07-19.md  PDF_BENCHMARK_V1_UNLIMITED_OCR_2026-07-20.json  PDF_BENCHMARK_V1_UNLIMITED_OCR_2026-07-20.md  PDF_BENCHMARK_V1_UNLIMITED_OCR_2026-07-20_COMPARISON.json  PDF_BENCHMARK_V1_UNLIMITED_OCR_2026-07-20_COMPARISON.md  PDF_BENCHMARK_V1_UNLIMITED_OCR_2026-07-20_PASS_2.json  PDF_BENCHMARK_V1_UNLIMITED_OCR_2026-07-20_PASS_2.md  PDF_BENCHMARK_V1_UNLIMITED_OCR_FIRST_PASS.checkpoint.json  PDF_BENCHMARK_V1_UNLIMITED_OCR_GEOTOPO_PORTABLE_2026-07-20.json  PDF_BENCHMARK_V1_UNLIMITED_OCR_GEOTOPO_PORTABLE_2026-07-20.md  PDF_BENCHMARK_V1_UNLIMITED_OCR_SECOND_PASS.checkpoint.json  PDF_BENCHMARK_V1_UNLIMITED_OCR_SMOKE_2026-07-20.json  PDF_BENCHMARK_V1_UNLIMITED_OCR_SMOKE_2026-07-20.md  PUBLIC_BENCHMARK.md  READINESS_CALIBRATION.md  READINESS_CALIBRATION_DEV_REPORT.md  (+63 more)
benchmarks/document_package/: __init__.py  corpus_manifest.json  harness.py  schema.py
benchmarks/hallucination_inspection_2026-07-20/: public_008_reportlab_inline_image_inline_image_pdf.output.md  public_027_cropped_rotated_scaled_cropped_rotated_scaled_pdf.output.PARTIAL.md  public_028_image_references_deduplication_wrong_references_pdf.output.md  review.json  review.md
benchmarks/kv_eval/: corpus.py  detector_lock.json  detector_lock.py  evaluator.py  ground_truth.py  qa_questions.py  repeated_record_qa.py  run_eval.py  token_comparison.py
benchmarks/mgam_eval/: evaluator.py  make_corpus.py  mgam.py  run.py
benchmarks/ocr_auto_calibration/: README.md  SCIENCE_CORPUS.md  __init__.py  cache.py  corpus.py  harness.py  metrics.py  preference.py  report.py  review_queue.py  run.py  schema.py  science_corpus.lock.json  synthetics.py
benchmarks/parsebench_adapter/: INSTALL.md  aksharamd.py
benchmarks/pdf_benchmark_adapters/: __init__.py  markitdown_adapter.py  pymupdf4llm_adapter.py  unlimited_ocr_adapter.py  unlimited_ocr_orchestrator.py  unlimited_ocr_portable.py  unlimited_ocr_safe_size_cache.py  unlimited_ocr_worker.py
benchmarks/readiness_gate/: README.md  run_benchmark.py
benchmarks/results/: README.md  comparison_benchmark_20260707T230041.jsonl  comparison_benchmark_20260707T230041.md  comparison_benchmark_20260707T230235.jsonl  comparison_benchmark_20260707T230235.md
docs/: IDENTITY_DESIGN.md  OCR_AUTO_CALIBRATION_HARNESS.md  TABLE_SCHEMA.md  output-schema.md  rag-integration.md  readiness-score.md
docs/adr/: ocr-auto-policy-v1.md  ocr_backend_execution_plan.md  ocr_backend_strategy.md  uoc-output-safety-policy-v1.md
docs/ocr/: unlimited_ocr_cache.md
docs/security/: unlimited_ocr_static_review_d549bb9d.md
examples/: 01_compile_file.py  02_compile_url.py  03_batch_compile.py  04_extract_and_chunk.py  05_readiness_gate_demo.py  README.md
tests/: conftest.py  test_a1a_trusted_manifest.py  test_a1b_verification_receipt.py  test_a1c_eval_override.py  test_a1d_runner_integration.py  test_advanced_fidelity_baseline.py  test_benchmark_corpus.py  test_benchmark_harness.py  test_beta_readiness.py  test_chunking.py  test_cli.py  test_cli_doctor.py  test_cli_models.py  test_cli_ux_gaps.py  test_compiler.py  test_dedup.py  test_e2e.py  test_e2e_installed_wheel.py  test_golden_outputs.py  test_identity.py  test_key_value.py  test_kv_eval.py  test_kv_integration.py  test_kv_safety.py  test_ledger.py  test_mcp.py  test_mgam_eval.py  test_multicolumn_candidate_replay_artifacts.py  test_multicolumn_recalibration_artifacts.py  test_ocr_auto_calibration_synthetics.py  test_packaging.py  test_parsebench_checksums_capture_artifacts.py  test_parsebench_fetch.py  test_parsebench_lockfile_artifacts.py  test_parsebench_page_ground_truth.py  test_parsebench_provenance_artifacts.py  test_parsebench_recalibration.py  test_pdf_benchmark_markitdown.py  test_pdf_benchmark_pymupdf4llm.py  test_pdf_benchmark_unlimited_ocr.py  (+27 more)
(+144 files in other folders)
