[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aksharamd"
version = "0.1.0"
description = "AksharaMD AI Document Compiler — compile documents into token-efficient, semantically complete representations for LLMs"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pymupdf>=1.24",
    "beautifulsoup4>=4.12",
    "markdown-it-py>=3.0",
    "rich>=13.0",
    "tiktoken>=0.7",
    "filetype>=1.2",
    "chardet>=5.0",
    # document formats
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "ebooklib>=0.18",
    "feedparser>=6.0",
    "extract-msg>=0.50",
    "Pillow>=10.0",
    "striprtf>=0.0.26",
    "pdfplumber>=0.11",
    "olefile>=0.46",
    "py7zr>=0.20",
    "mcp[cli]>=1.0",
    "requests>=2.28",
    "defusedxml>=0.7",
    # optional heavy deps — install separately for full support:
    # pip install openai-whisper   (audio transcription; also needs ffmpeg on PATH)
    # pip install pytesseract      (image OCR; also needs Tesseract binary)
    # LibreOffice on PATH          (.doc/.ppt legacy Office files)
]

[project.scripts]
aksharamd = "aksharamd.cli:main"
aksharamd-mcp = "aksharamd.mcp_server:serve"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "bandit[toml]>=1.7",
    "docutils>=0.20",
    "mypy>=1.8",
]
audio = [
    "openai-whisper>=20231117",
]
ocr = [
    "pytesseract>=0.3",
]
full = [
    "aksharamd[audio,ocr]",
]
eval = [
    "anthropic>=0.40",
    "openai>=1.30",
    "google-genai>=1.0",
    "markitdown>=0.1",
    "pyyaml>=6.0",
    "python-Levenshtein>=0.25",
    "datasets>=2.0",
    "tiktoken>=0.7",
    # optional comparison tools — install separately if needed:
    # pip install "unstructured[all-docs]"
    # pip install docling
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["aksharamd"]
omit = [
    "aksharamd/plugins/parsers/legacy_office.py",  # requires LibreOffice binary
    "aksharamd/plugins/parsers/audio.py",           # requires whisper + ffmpeg
]

[tool.coverage.report]
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long — ruff format handles this
    "UP007",  # X | Y union syntax — keep Optional for clarity
    "E402",   # module-level import not at top — intentional in plugin files (env constants before registry)
]
exclude = ["benchmarks/"]

[tool.bandit]
skips = ["B101"]  # assert statements are fine in tests
