[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aksharamd"
version = "0.3.5"
description = "AksharaMD — LLM document ingestion pipeline. Compile any document into token-efficient, structured content for AI workflows."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pymupdf>=1.24",
    "beautifulsoup4>=4.12",
    "markdown-it-py>=3.0",
    "rich>=13.0",
    "tiktoken>=0.7",
    "filetype>=1.2",
    "chardet>=5.0",
    # document formats
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "ebooklib>=0.18",
    "feedparser>=6.0",
    "extract-msg>=0.50",
    # Security note: pillow is pinned to <11.0.0 in the universal lockfile because
    # surya-ocr (via the [vision] extra) requires pillow<11 across all released
    # versions. Upgrading to >=12.2.0 (which fixes CVE-2025-* alerts) requires a
    # surya-ocr release that lifts this cap. Track: github.com/VikParuchuri/surya
    "Pillow>=10.0",
    "striprtf>=0.0.26",
    "pdfplumber>=0.11",
    "olefile>=0.46",
    "py7zr>=0.20",
    "mcp[cli]>=1.0",
    "requests>=2.28",
    "defusedxml>=0.7",
    # optional heavy deps — install separately for full support:
    # pip install openai-whisper   (audio transcription; also needs ffmpeg on PATH)
    # pip install pytesseract      (image OCR; also needs Tesseract binary)
    # LibreOffice on PATH          (.doc/.ppt legacy Office files)
    # Pandoc on PATH               (niche markup: AsciiDoc, Org-mode, Textile, MediaWiki, DocBook, OPML, man/roff)
]

[project.urls]
Homepage = "https://github.com/K2alyan/aksharaMD"
Source = "https://github.com/K2alyan/aksharaMD"
"Issue Tracker" = "https://github.com/K2alyan/aksharaMD/issues"
Changelog = "https://github.com/K2alyan/aksharaMD/blob/main/CHANGELOG.md"

[project.scripts]
aksharamd = "aksharamd.cli:main"
aksharamd-mcp = "aksharamd.mcp_server:serve"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "bandit[toml]>=1.7",
    "docutils>=0.20",
    "mypy>=1.8",
]
audio = [
    "openai-whisper>=20231117",
]
cloud = [
    "boto3>=1.28",
]
ocr = [
    "pytesseract>=0.3",
]
vision = [
    "marker-pdf>=1.6",
]
math = [
    "pix2tex>=0.1.1",
]
index = [
    "watchdog>=4.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
full = [
    "aksharamd[audio,ocr,cloud,vision,math,index]",
]
eval = [
    "anthropic>=0.40",
    "openai>=1.30",
    "google-genai>=1.0",
    "markitdown>=0.1",
    "pyyaml>=6.0",
    "python-Levenshtein>=0.25",
    "datasets>=2.0",
    "tiktoken>=0.7",
    # optional comparison tools — install separately if needed:
    # pip install "unstructured[all-docs]"
    # pip install docling
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["aksharamd"]

[tool.coverage.report]
fail_under = 72
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long — ruff format handles this
    "UP007",  # X | Y union syntax — keep Optional for clarity
    "E402",   # module-level import not at top — intentional in plugin files (env constants before registry)
]

[tool.bandit]
skips = ["B101"]  # assert statements are fine in tests
